--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -6,10 +6,12 @@
     <link href="{% static "css/blog.css" %}" rel="stylesheet">
   </head>
   <body>
-    <div id="content">{% block content %} {% endblock %}</div>
-    <div id="sidebar">
-      <h2>My blog</h2>
-      <p>This is my blog.</p>
+    <div class="container">
+      <div class="content">{% block content %} {% endblock %}</div>
+      <div class="sidebar">
+        <h2>My blog</h2>
+        <p>This is my blog.</p>
+      </div>
     </div>
   </body>
 </html>
