--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -58,3 +58,37 @@ body {
 .current {
   margin: 0 10px;
 }
+
+/* POST SHARE */
+form {
+  margin-top: 20px;
+}
+
+input[type="submit"] {
+  background-color: #337ab7;
+  color: #fff;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #286090;
+}
+
+.comment-count {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.comment {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+.info {
+  font-style: italic;
+  margin-bottom: 5px;
+}
