--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,14 +1,31 @@
 {% extends 'blog/base.html' %}
 
-{% block title %} {{post.title}} {% endblock title %}
+{% block title %} {{post.title}} {% endblock %}
 
 {% block content %}
     <h1>{{post.title}}</h1>
     <p class='date'>Published {{ post.publish }} by {{ post.author }}</p>
     {{ post.body|linebreaks }}
     <p>
-        <a href="{% url "blog:post_share" post.id %}">
+        <a href='{% url "blog:post_share" post.id %}'>
         Share this post
         </a>
     </p>
-{% endblock content %}
+    {% with comments.count as total_comments %}
+        <h2 class="comment-count">
+            {{ total_comments }} comment{{ total_comments|pluralize }} 
+        </h2>
+    {% endwith %}
+    {% for comment in comments %}
+        <div class="comment">
+            <p class="info">
+                Comment {{ forloop.counter }} by {{ comment.name }}
+                {{ comment.created }}
+            </p>
+            {{ comment.body|linebreaks }}
+        </div>
+    {% empty %}
+        <p>There are no comments.</p>
+    {% endfor %}
+    {% include "blog/includes/comment_form.html" %}
+{% endblock %}
